# efl-app-skeleton

./: .gitignore  Makefile.am  configure.ac  description  eflprj
data/desktop/: Makefile.am  skeleton.desktop.in
doc/: Makefile.am  skeleton.1  skeleton.1.in
packaging/pkgbuild/: PKGBUILD
packaging/slackware/: Makefile.am  skeleton.SlackBuild  slack-desc
po/: POTFILES.in
src/lib/: Makefile.am  Skeleton.h  skeleton.c  skeleton_private.h
src/tests/: Makefile.am  test_skeleton.c
